--- a/web3d/css/main.css
+++ b/web3d/css/main.css
@@ -1,19 +1,31 @@
 html, body, #mymain-container {
   width: 100%;
   height: 100%;
-  background: #efefef;
+  line-height: 1em;
+  background: #00bddf;
   overflow: hidden;
   font-family: 'helvetica', sans-serif;
-  font-size: 12px;
+}
+
+input {
+  margin: 0;
+  padding: 0;
 }
 
 #mynav {
   position: absolute;
-  z-index: 100;
+  z-index: 99999;
   width: 100%;
-  height: 70px;
   transition: all 500ms ease-in-out;
   -webkit-transition: all 800ms ease-in-out;
+}
+
+.collapsed {
+  height: 70px;
+}
+
+.expand {
+  height: 100%;
 }
 
 .sliding {
@@ -22,49 +34,60 @@ html, body, #mymain-container {
 
 #myform {
   width: 100%;
-  height: 70px;
   background: #00bddf;
   transition: all 1000ms ease-in-out;
   -webkit-transition: all 1200ms ease-in-out;
 }
 
-.shadow {
+.myshadow {
   -webkit-box-shadow: 0px 2px 12px rgba(50, 50, 50, 0.6);
   -moz-box-shadow: 0px 2px 12px rgba(50, 50, 50, 0.6);
   box-shadow: 0px 2px 12px rgba(50, 50, 50, 0.6);
 }
 
-.centered {
-  position: absolute;
-  top: 40%;
+#myInputs {
+  width: 50%;
+  height: 42px;
+  max-width: 600px;
+  transition: position 800ms ease-in-out;
+  -webkit-transition: position 800ms ease-in-out;
 }
 
-#center-margin {
+.barStyle {
+  position: raletive;
+  padding: 13px 0 0;
   margin: 0 auto;
-  width: 70%;
-  padding-top: 0;
-  transition: all 1000ms ease-in-out;
-  -webkit-transition: all 800ms ease-in-out;
+}
+
+.fullStyle {
+  position: absolute;
+  left: 30%;
+  top: 30%;
+}
+
+#web3d {
+  width: 100%;
+  margin: 0 0 20px;
 }
 
 #mylogo {
-  background: url("../img/logo.png") no-repeat;
-  width: 53px;
-  height: 43px;
+  background: url("../img/mylogo.png") no-repeat;
+  width: 47px;
+  height: 48px;
   float: left;
-  margin: 13px 0 0 20px;
+  margin: 0;
   cursor: pointer;
 }
 #mylogo:hover {
-  background: url("../img/logo-hover.png") no-repeat;
+  background: url("../img/mylogo-hover.png") no-repeat;
 }
 
 #siteInput {
   width: 65%;
-  height: 42px;
+  height: 100%;
+  margin: 0 0 0 1.5%;
   border: 1px solid #009fbb;
   background: #00a7c6;
-  margin: 13px 0 0 20px;
   padding: 0 10px;
   float: left;
   -webkit-border-radius: 3px;
@@ -78,19 +101,19 @@ html, body, #mymain-container {
 #mybtn {
   background: white;
   float: left;
-  height: 42px;
-  margin: 13px 0 0 20px;
+  width: 5%;
+  min-width: 40px;
+  height: 100%;
+  margin: 0 0 0 1.5%;
   -webkit-border-radius: 3px;
   -moz-border-radius: 3px;
   border-radius: 3px;
   color: #00bddf;
   outline: none;
-  font-size: 1.2em;
   font-weight: bold;
+  text-align: center;
+  vertical-align: middle;
   cursor: pointer;
-}
-#mybtn p {
-  margin: 12px 20px 0;
 }
 #mybtn:hover {
   background: #0092ac;
@@ -109,15 +132,33 @@ html, body, #mymain-container {
   background: url("../img/tab-hover.png") no-repeat;
 }
 
-.mydescription {
+#mydescription {
   color: #0092ac;
   font-size: 0.8em;
-  margin: 1% 0 0 3%;
-  float: left;
+  float: right;
   z-index: 101;
-  max-width: 14%;
-  text-align: left;
-  position: relative;
+  max-width: 25%;
+  text-align: right;
+  position: absolute;
+  top: 15px;
+  right: 2%;
+}
+
+#myInfo {
+  clear: both;
+  padding: 15px 0 20px 0;
+  width: 80%;
+  margin: 0 auto;
+}
+#myInfo p {
+  font-size: 1em;
+  color: #0089a2;
+  line-height: 1.5em;
+  text-align: center;
+}
+
+.hide {
+  display: none;
 }
 
 #myloading {
@@ -140,7 +181,7 @@ html, body, #mymain-container {
   font-weight: bold;
   text-align: center;
   color: #00bddf;
-  margin: 0 auto;
+  margin: 15px auto;
 }
 
 #mymain-container {
@@ -155,39 +196,86 @@ html, body, #mymain-container {
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffff', endColorstr='#b5b5b5',GradientType=1 );
 }
 
+@media screen and (min-width: 1450px) {
+  .fullStyle {
+    left: 35%;
+  }
+
+  #siteInput {
+    width: 75%;
+  }
+}
 @media screen and (max-width: 950px) {
-  .mydescription {
+  #mydescription {
     position: fixed;
+    top: auto;
     bottom: 1%;
     right: 2%;
-    max-width: 100%;
-    text-align: right;
+    max-width: 95%;
   }
 }
 @media screen and (max-width: 800px) {
-  #center-margin {
+  #myInputs {
     width: 70%;
   }
 
   #siteInput {
-    width: auto;
+    width: 60%;
+  }
+
+  .fullStyle {
+    left: 20%;
   }
 }
-@media screen and (max-width: 700px) {
-  #center-margin {
-    width: 90%;
+@media screen and (max-width: 768px) {
+  #myInputs {
+    width: 80%;
   }
 
   #siteInput {
-    width: 50%;
+    width: 67%;
+  }
+
+  .fullStyle {
+    left: 10%;
+    top: 15%;
+  }
+
+  #mylogo {
+    width: 100%;
+    margin: 0 0 8px 0;
+    background-position: center;
+  }
+  #mylogo:hover {
+    background-position: center;
+  }
+
+  #siteInput {
+    width: 99.5%;
+    margin: 0 0 8px 0;
+    padding: 0;
+    text-indent: 10px;
+  }
+
+  #mybtn {
+    width: 100%;
+    margin: 0 0 8px 0;
+  }
+
+  #myInfo {
+    width: 100%;
+  }
+
+  .collapsed {
+    height: 180px;
+  }
+
+  .sliding {
+    top: -170px;
   }
 }
 @media screen and (max-width: 500px) {
-  #center-margin {
-    width: 95%;
-  }
-
-  #siteInput {
-    width: 30%;
+  #myInputs {
+    width: 80%;
   }
 }
