--- a/web3d/css/main.css
+++ b/web3d/css/main.css
@@ -71,15 +71,15 @@ input {
 }
 
 #mylogo {
-  background: url("../img/mylogo.png") no-repeat;
-  width: 47px;
-  height: 48px;
+  background: url("../img/mylogo.png") no-repeat 0 0;
+  width: 42px;
+  height: 43px;
   float: left;
   margin: 0;
   cursor: pointer;
 }
 #mylogo:hover {
-  background: url("../img/mylogo-hover.png") no-repeat;
+  background: url("../img/mylogo-hover.png") no-repeat 0 0;
 }
 
 #siteInput {
