updated landing page css animation

--- a/web3d/css/main.scss
+++ b/web3d/css/main.scss
@@ -73,6 +73,11 @@ input{
 	top: 30%;
 }
 
+#perspective{
+	perspective:150;
+	-webkit-perspective:150;
+}
+
 #web3d{
 	width:100%;
 	margin: 0 0 20px;
